k8s/02-mariadb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
  namespace: capa
spec:
  serviceName: mariadb
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: mariadb:11
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: data
          mountPath: /var/lib/mysql
        - name: init-sql
          mountPath: /docker-entrypoint-initdb.d
        readinessProbe:
          exec:
            command: ["healthcheck.sh", "--connect", "--innodb_initialized"]
          initialDelaySeconds: 20
          periodSeconds: 10
          failureThreshold: 6
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: mariadb-pvc
      - name: init-sql
        configMap:
          name: mariadb-init
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: capa
spec:
  selector:
    app: mariadb
  ports:
  - port: 3306
    targetPort: 3306
