k8s/06-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: capa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: ui
        image: ghcr.io/GHCR_USER/capa-ui:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: capa
spec:
  selector:
    app: ui
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
  type: NodePort
