k8s/mes-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mes-api-svc
  namespace: capa-agent
spec:
  selector:
    app: mes-api
  ports:
    - port: 8001
      targetPort: 8001
      protocol: TCP
  type: ClusterIP
