k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capa-agent-ingress
  namespace: capa-agent
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: capa-agent.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: capa-agent-svc
                port:
                  number: 8000
